unpackaged/main/default/objects/Regime__c/Regime__c.object-meta.xml
<CustomObject>
    <description>Used to manage the regimes designed for patients by their dietician or healthcare professional. Links to 'Related Products' object to allow addition of Products.This object is surfaced in the Community.</description>
    <label>Regime</label>
    <nameField>
        <displayFormat>REG {000000}</displayFormat>
        <label>Regime Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regimes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>