unpackaged/main/default/objects/Regime__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>If no longer active, when did this Regime end?</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>