unpackaged/main/default/objects/Regime__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be a Contact of Type Patient.</errorMessage>
        <filterItems>
            <field>Contact.Relationship_to_Vitaflo__c</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <infoMessage>Must be a Contact of Type Patient.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Regimes</relationshipLabel>
    <relationshipName>Regimes</relationshipName>
    <type>Lookup</type>
</CustomField>