unpackaged/main/default/objects/Regime__c/fields/Patient_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Patient_Diagnosis__c</fullName>
    <formula>Patient__r.Patient_Diagnosis__r.Name</formula>
    <label>Patient Diagnosis</label>
    <type>Text</type>
</CustomField>