unpackaged/main/default/objects/Regime__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <description>Used to search in lookup filter on Prescription/Order Product</description>
    <externalId>true</externalId>
    <label>Patient Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>