unpackaged/main/default/objects/Regime__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>When does this Regime become active for the patient?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>